Custom radio buttons, line-height fixes, flex-wrap for breadcrumbs.

--- a/src/Isotope/Isotope/Areas/Front/ClientApp/styles/_variables.scss
+++ b/src/Isotope/Isotope/Areas/Front/ClientApp/styles/_variables.scss
@@ -34,7 +34,6 @@ $card-spacer-x:     1rem;
 
 $alert-padding-y:     0.5rem;
 $alert-padding-x:     1rem;
-$alert-border-width:  0;
 $alert-bg-level:      0;
 $alert-border-level:  0;
 $alert-color-level:   -10;
